lang/tests/derive/ui/fail/03-generic.rs
use liquid::InOut;
use liquid_lang as liquid;

#[derive(InOut)]
pub struct MyStruct<T> {
    a: T,
}

fn main() {}
