lang/tests/derive/ui/fail/03-generic.stderr
error: generic are not supported
 --> $DIR/03-generic.rs:5:20
  |
5 | pub struct MyStruct<T> {
  |                    ^^^
